red-commit - FibonacciSumEven_Input1_Returns0

--- a/ProjectEuler/ProjectEuler.vcxproj
+++ b/ProjectEuler/ProjectEuler.vcxproj
@@ -144,6 +144,7 @@
   <ItemGroup>
     <ClInclude Include="Exports.h" />
     <ClInclude Include="Problem1.h" />
+    <ClInclude Include="Problem2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -163,6 +164,7 @@
       </PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Problem1.cpp" />
+    <ClCompile Include="Problem2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
