--- a/ProjectEulerTests/ProjectEulerTests.vcxproj.filters
+++ b/ProjectEulerTests/ProjectEulerTests.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Problem1Tests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Problem2Tests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
